2010-04-19  Dirk Pranke  <dpranke@chromium.org>

        Unreviewed, build fix.

        (Re-)add dryrun.py; this was renamed from passing.py in the previous
        CL but apparently somehow didn't get checked in.

        https://bugs.webkit.org/show_bug.cgi?id=37841

        * Scripts/webkitpy/layout_tests/port/dryrun.py: Added.

2010-04-19  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by David Levin.

        check-webkit-style: exits when encountering a deleted file
        https://bugs.webkit.org/show_bug.cgi?id=37122

        This reverts the quick fix done by r57119 and makes check_patch
        not call check_file for deleted files.

        Also this change fixes the behavior for "-", which should mean
        stdin.  Before this change, the style checker just ignored "-"
        with a warning message.

        * Scripts/webkitpy/style/checker.py:
        * Scripts/webkitpy/style/checker_unittest.py:

2010-04-19  Daniel Bates  <dbates@rim.com>

        No review, rolling out 57868.
        http://trac.webkit.org/changeset/57868
        https://bugs.webkit.org/show_bug.cgi?id=37748

        Sheriffbot wasn't very inspirational after this patch.
        Instead, he was silent when you said hi :-(. Rolling
        out this patch so that I can debug/test this some more.

        * Scripts/webkitpy/common/net/bugzilla.py:
        * Scripts/webkitpy/common/net/bugzilla_unittest.py:
        * Scripts/webkitpy/tool/bot/irc_command.py:
        * Scripts/webkitpy/tool/bot/sheriffircbot_unittest.py:
        * Scripts/webkitpy/tool/mocktool.py:

2010-04-19  Daniel Bates  <dbates@rim.com>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=37748

        Make Sheriffbot more inspirational.

        * Scripts/webkitpy/common/net/bugzilla.py:
        * Scripts/webkitpy/common/net/bugzilla_unittest.py:
        * Scripts/webkitpy/tool/bot/irc_command.py:
        * Scripts/webkitpy/tool/bot/sheriffircbot_unittest.py: