@@ -61,14 +61,14 @@ class DryrunTest(unittest.TestCase):
     def test_basics(self):
         self.assertTrue(passing_run(['--platform', 'dryrun',
                                      'fast/html']))
-        self.assertTrue(passing_run(['--platform', 'dryrun-mac',
-                                     'fast/html']))
-        self.assertTrue(passing_run(['--platform', 'dryrun-chromium-mac',
-                                     'fast/html']))
-        self.assertTrue(passing_run(['--platform', 'dryrun-chromium-win',
-                                     'fast/html']))
-        self.assertTrue(passing_run(['--platform', 'dryrun-chromium-linux',
-                                     'fast/html']))
+        #self.assertTrue(passing_run(['--platform', 'dryrun-mac',
+        #                             'fast/html']))
+        #self.assertTrue(passing_run(['--platform', 'dryrun-chromium-mac',
+        #                             'fast/html']))
+        #self.assertTrue(passing_run(['--platform', 'dryrun-chromium-win',
+        #                             'fast/html']))
+        #self.assertTrue(passing_run(['--platform', 'dryrun-chromium-linux',
+        #                             'fast/html']))
 
 if __name__ == '__main__':
     unittest.main()
